exports[`prefer-context-mock > invalid(1): import {test, mock} from 'node:test';\nmock.fn(); 1`] = `

  1 | import {test, mock} from 'node:test';
  2 | mock.fn();

`;

exports[`prefer-context-mock > invalid(1): import {test, mock} from 'node:test';\nmock.fn(); 2`] = `

Message:
  1 | import {test, mock} from 'node:test';
> 2 | mock.fn();
    | ^^^^^^^^^ Prefer \`t.mock.fn\` over the global \`mock.fn\`, which is not automatically restored between tests.

`;

exports[`prefer-context-mock > invalid(10): import {test, mock} from 'node:test';\ntest(\"a\", t => { mock.method(obj, \"fn\"); }); 1`] = `

  1 | import {test, mock} from 'node:test';
  2 | test("a", t => { mock.method(obj, "fn"); });

`;

exports[`prefer-context-mock > invalid(10): import {test, mock} from 'node:test';\ntest(\"a\", t => { mock.method(obj, \"fn\"); }); 2`] = `

Message:
  1 | import {test, mock} from 'node:test';
> 2 | test("a", t => { mock.method(obj, "fn"); });
    |                  ^^^^^^^^^^^^^^^^^^^^^^ Prefer \`t.mock.method\` over the global \`mock.method\`, which is not automatically restored between tests.

`;

exports[`prefer-context-mock > invalid(11): import {mock as m} from 'node:test';\nm.fn(); 1`] = `

  1 | import {mock as m} from 'node:test';
  2 | m.fn();

`;

exports[`prefer-context-mock > invalid(11): import {mock as m} from 'node:test';\nm.fn(); 2`] = `

Message:
  1 | import {mock as m} from 'node:test';
> 2 | m.fn();
    | ^^^^^^ Prefer \`t.mock.fn\` over the global \`mock.fn\`, which is not automatically restored between tests.

`;

exports[`prefer-context-mock > invalid(12): import * as nodeTest from 'node:test';\nnodeTest.mock.fn(); 1`] = `

  1 | import * as nodeTest from 'node:test';
  2 | nodeTest.mock.fn();

`;

exports[`prefer-context-mock > invalid(12): import * as nodeTest from 'node:test';\nnodeTest.mock.fn(); 2`] = `

Message:
  1 | import * as nodeTest from 'node:test';
> 2 | nodeTest.mock.fn();
    | ^^^^^^^^^^^^^^^^^^ Prefer \`t.mock.fn\` over the global \`mock.fn\`, which is not automatically restored between tests.

`;

exports[`prefer-context-mock > invalid(13): import {test} from 'node:test';\ntest.mock.fn(); 1`] = `

  1 | import {test} from 'node:test';
  2 | test.mock.fn();

`;

exports[`prefer-context-mock > invalid(13): import {test} from 'node:test';\ntest.mock.fn(); 2`] = `

Message:
  1 | import {test} from 'node:test';
> 2 | test.mock.fn();
    | ^^^^^^^^^^^^^^ Prefer \`t.mock.fn\` over the global \`mock.fn\`, which is not automatically restored between tests.

`;

exports[`prefer-context-mock > invalid(14): import {test, mock} from 'node:test';\nmock.method(obj as Target, \"fn\"); 1`] = `

  1 | import {test, mock} from 'node:test';
  2 | mock.method(obj as Target, "fn");

`;

exports[`prefer-context-mock > invalid(14): import {test, mock} from 'node:test';\nmock.method(obj as Target, \"fn\"); 2`] = `

Message:
  1 | import {test, mock} from 'node:test';
> 2 | mock.method(obj as Target, "fn");
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`t.mock.method\` over the global \`mock.method\`, which is not automatically restored between tests.

`;

exports[`prefer-context-mock > invalid(15): import {test, mock} from 'node:test';\n(mock.timers as any).enable(); 1`] = `

  1 | import {test, mock} from 'node:test';
  2 | (mock.timers as any).enable();

`;

exports[`prefer-context-mock > invalid(15): import {test, mock} from 'node:test';\n(mock.timers as any).enable(); 2`] = `

Message:
  1 | import {test, mock} from 'node:test';
> 2 | (mock.timers as any).enable();
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`t.mock.timers\` over the global \`mock.timers\`, which is not automatically restored between tests.

`;

exports[`prefer-context-mock > invalid(2): import {test, mock} from 'node:test';\nmock.method(obj, \"fn\"); 1`] = `

  1 | import {test, mock} from 'node:test';
  2 | mock.method(obj, "fn");

`;

exports[`prefer-context-mock > invalid(2): import {test, mock} from 'node:test';\nmock.method(obj, \"fn\"); 2`] = `

Message:
  1 | import {test, mock} from 'node:test';
> 2 | mock.method(obj, "fn");
    | ^^^^^^^^^^^^^^^^^^^^^^ Prefer \`t.mock.method\` over the global \`mock.method\`, which is not automatically restored between tests.

`;

exports[`prefer-context-mock > invalid(3): import {test, mock} from 'node:test';\nmock.getter(obj, \"x\"); 1`] = `

  1 | import {test, mock} from 'node:test';
  2 | mock.getter(obj, "x");

`;

exports[`prefer-context-mock > invalid(3): import {test, mock} from 'node:test';\nmock.getter(obj, \"x\"); 2`] = `

Message:
  1 | import {test, mock} from 'node:test';
> 2 | mock.getter(obj, "x");
    | ^^^^^^^^^^^^^^^^^^^^^ Prefer \`t.mock.getter\` over the global \`mock.getter\`, which is not automatically restored between tests.

`;

exports[`prefer-context-mock > invalid(4): import {test, mock} from 'node:test';\nmock.setter(obj, \"x\"); 1`] = `

  1 | import {test, mock} from 'node:test';
  2 | mock.setter(obj, "x");

`;

exports[`prefer-context-mock > invalid(4): import {test, mock} from 'node:test';\nmock.setter(obj, \"x\"); 2`] = `

Message:
  1 | import {test, mock} from 'node:test';
> 2 | mock.setter(obj, "x");
    | ^^^^^^^^^^^^^^^^^^^^^ Prefer \`t.mock.setter\` over the global \`mock.setter\`, which is not automatically restored between tests.

`;

exports[`prefer-context-mock > invalid(5): import {test, mock} from 'node:test';\nmock.property(obj, \"x\", 1); 1`] = `

  1 | import {test, mock} from 'node:test';
  2 | mock.property(obj, "x", 1);

`;

exports[`prefer-context-mock > invalid(5): import {test, mock} from 'node:test';\nmock.property(obj, \"x\", 1); 2`] = `

Message:
  1 | import {test, mock} from 'node:test';
> 2 | mock.property(obj, "x", 1);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`t.mock.property\` over the global \`mock.property\`, which is not automatically restored between tests.

`;

exports[`prefer-context-mock > invalid(6): import {test, mock} from 'node:test';\nmock.module(\"node:fs\", {}); 1`] = `

  1 | import {test, mock} from 'node:test';
  2 | mock.module("node:fs", {});

`;

exports[`prefer-context-mock > invalid(6): import {test, mock} from 'node:test';\nmock.module(\"node:fs\", {}); 2`] = `

Message:
  1 | import {test, mock} from 'node:test';
> 2 | mock.module("node:fs", {});
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`t.mock.module\` over the global \`mock.module\`, which is not automatically restored between tests.

`;

exports[`prefer-context-mock > invalid(7): import {test, mock} from 'node:test';\nmock.timers.enable({apis: [\"setTimeout\"]}); 1`] = `

  1 | import {test, mock} from 'node:test';
  2 | mock.timers.enable({apis: ["setTimeout"]});

`;

exports[`prefer-context-mock > invalid(7): import {test, mock} from 'node:test';\nmock.timers.enable({apis: [\"setTimeout\"]}); 2`] = `

Message:
  1 | import {test, mock} from 'node:test';
> 2 | mock.timers.enable({apis: ["setTimeout"]});
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`t.mock.timers\` over the global \`mock.timers\`, which is not automatically restored between tests.

`;

exports[`prefer-context-mock > invalid(8): import {test, mock} from 'node:test';\nmock.timers.tick(100); 1`] = `

  1 | import {test, mock} from 'node:test';
  2 | mock.timers.tick(100);

`;

exports[`prefer-context-mock > invalid(8): import {test, mock} from 'node:test';\nmock.timers.tick(100); 2`] = `

Message:
  1 | import {test, mock} from 'node:test';
> 2 | mock.timers.tick(100);
    | ^^^^^^^^^^^^^^^^^^^^^ Prefer \`t.mock.timers\` over the global \`mock.timers\`, which is not automatically restored between tests.

`;

exports[`prefer-context-mock > invalid(9): import {test, mock} from 'node:test';\nmock.timers.reset(); 1`] = `

  1 | import {test, mock} from 'node:test';
  2 | mock.timers.reset();

`;

exports[`prefer-context-mock > invalid(9): import {test, mock} from 'node:test';\nmock.timers.reset(); 2`] = `

Message:
  1 | import {test, mock} from 'node:test';
> 2 | mock.timers.reset();
    | ^^^^^^^^^^^^^^^^^^^ Prefer \`t.mock.timers\` over the global \`mock.timers\`, which is not automatically restored between tests.

`;
